> Added radio buttons in the play controls box for "Recording" and "Playback" modes. These will double as indicators of the current mode.
> Rewind button is always grayed out in record mode
> If you switch to record mode (from playback) it erases the remainder of the timeline after thumb position and starts recording from where the thumb was.
> Decreased sensitivity of remote control

# 1.20.26 (28105) Feb 5, 2009
> Added fade feature on dot trace
> Removed invisible and solid line traces
> Improve thumb handle on timeline
> Improve graphics for timeline track
> Timeline doesn't disappear during record

# 1.20.25 (28043) Feb 03 2009
> Added fudge factors to improve velocity and acceleration scales
> Inverted Y Axis so that positive Y is up
> Major performance improvements
> Should show acceleration and velocity while moving to circle.
> Should have smooth transition between linear and circular motion modes.

# 1.20.24 (27822) 01-31-2009
> Fixed: Remote control doesn't show correct initial position
> Fixed: When switching to manual from a premade motion, don't jump to old last recorded position.
> Fixed: Return ladybug is broken
> Added fade trace option, works during record and playback
> Set fade path to default
> Fixed remote control to use new position mode sampling
> Added partial fade path
> Added faint blue background for timeline

# 1.20.23 (27797) 01-30-2009
> Changed to Motion2D model
> Put black outlines on the vel and acc vectors to help them stand out
> Reduce speed of preset motions

# 1.20.22 (27694) 01-26-2009
# 1.20.21 (27692) 01-26-2009
> Added developer controls for motion behavior
> Added cursor to playback speed slider

# 1.20.20 (27683) 01-26-2009
> Use analytic values for velocity and acceleration in circular motion
> Use analytic values for velocity and acceleration in ellipse

# 1.20.19 (27680) 01-26-2009
> Changed default recording time from 30 to 15 seconds
> Removed the "Stop/Go" button below the remote control